# MSP432_Cmake

./: .gitignore  CMakeLists.txt  README.md  main.c
